# pytest

./: .gitignore  Dockerfile  Makefile  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 1845b6121dc7_add_users_table.py
app/: database.py  main.py  models.py  scemas.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: a9f0a6212b24_initial_migration.py  cd7d2305fff9_add_column_group_products.py
app/crud/: orders.py  posts.py  products.py  users.py
app/routers/: orders.py  posts.py  products.py  users.py
src/converter/: converter.py
