[project]
name = "pytest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "mypy>=1.20.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.13.0",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.49",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
